# Mechanism-GWAS-Causal-Graphs

./: .gitignore  .zenodo.json  BREAKTHROUGH_EVIDENCE_SUMMARY.md  CITATION.cff  COMPREHENSIVE_MANUSCRIPT_VERIFICATION.md  COMPREHENSIVE_MANUSCRIPT_VERIFICATION_REPORT.md  CRISPR_BENCHMARK_CORRECTION.md  Dockerfile  LICENSE  README.md  REPRODUCE.md  START_HERE.md  TRAINING_LEAKAGE_CORRECTION_SUMMARY.md  ZENODO_DOI.json  build_results_cache.py  calculate_real_metrics.py  compute_calibration_metrics.py  create_zenodo_v1.2.py  distance_matched_robustness.py  download_all_data.ps1  environment.yml  generate_calibration_curve.py  generate_candidate_set_sensitivity.py  generate_stratified_regime_map.py  prepare_data.py  proper_apples_to_apples_comparison.py  pyproject.toml  upload_to_zenodo.py
config/: config.yaml  traits.yaml
docs/: baseline_comparisons.md  causal_estimands.md  cross_country_invariance.md  methods.md  nature_sustainability_rewrites.md  reporting_summary.md
figures/: regime_map_data.csv  table_1_benchmark_statistics.csv  table_1_validity_matrix.csv  table_2_baseline_results.csv
manuscript/: main.fdb_latexmk  main.tex  references.bib
regulatorybench/: CITATION.cff  CRITICAL_FIXES_COMPLETE_SUMMARY.md  MANUSCRIPT_ARTICLE.md  MANUSCRIPT_DRAFT.md  MANUSCRIPT_NATURE_GENETICS.md  METHOD_VALIDITY_TAXONOMY.md  PEER_REVIEW_CIRCULARITY_ANALYSIS.md  README.md  REPRODUCIBILITY_CARD.md  RESULTS_SUMMARY.md  SUBMISSION_SUMMARY.md  V3_EXECUTION_STATUS.md  V3_PLATINUM_COMPLETE.md  V3_PLATINUM_IMPLEMENTATION_GUIDE.md  analyze_truth_labels.py  article_upgrade.py  benchmark_integrity_checker.py  create_tiered_benchmark.py  distance_stratified_evaluation.py  drug_target_validation.py  enhanced_evaluation.py  evaluate_task_a.py  evaluate_task_b.py  expand_mendelian_curation.py  extract_coding_vep_enhanced.py  flames_features.py  run_all.py  (+15 more)
(+240 files in other folders)
